Bug 91763 - [bisected] Can't log into DE after `configurable maximum number of clients`
Summary: [bisected] Can't log into DE after `configurable maximum number of clients`
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Server/General (show other bugs)
Version: git
Hardware: Other Linux (All)
: medium major
Assignee: Xorg Project Team
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-08-26 14:20 UTC by Nick Sarnie
Modified: 2015-09-02 05:34 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
.xsession-errors (7.26 KB, text/plain)
2015-08-26 14:23 UTC, Nick Sarnie
no flags Details
xorg.log with commit (45.85 KB, text/plain)
2015-08-26 17:50 UTC, Nick Sarnie
no flags Details
xorg.log without commit (47.88 KB, text/plain)
2015-08-26 17:50 UTC, Nick Sarnie
no flags Details
Proposed fix (1.18 KB, patch)
2015-08-31 06:18 UTC, Olivier Fourdan
no flags Details | Splinter Review

Description Nick Sarnie 2015-08-26 14:20:39 UTC
Hi guys,

Sorry if this is the wrong place. If I use xserver commit `configurable maximum number of clients`, when I try to log into Cinnamon, I get a black screen and then it goes back to the login screen. Software rendering still works. If I revert this commit, it works fine.

I've attached xsession errors.

Let me know if you need anything.

Thanks,
sarnex
Comment 1 Nick Sarnie 2015-08-26 14:23:03 UTC
Created attachment 117926 [details]
.xsession-errors
Comment 2 Alan Coopersmith 2015-08-26 16:29:10 UTC
.xsession-errors has the client-side error messages - the Xserver log from
/var/log/Xorg.0.log (or Xorg.0.log.prev if the server already restarted)
would be more useful, especially if it captured a server abort message or
a crash backtrace.
Comment 3 Nick Sarnie 2015-08-26 17:50:15 UTC
Created attachment 117933 [details]
xorg.log with commit

Hi.

I've attached xorg.log with the commit and without. Both are with direct/hardware render selected.

Thanks,
sarnex
Comment 4 Nick Sarnie 2015-08-26 17:50:40 UTC
Created attachment 117935 [details]
xorg.log without commit
Comment 5 Olivier Fourdan 2015-08-27 06:53:39 UTC
Unfortunately, I can't see the X server crashing in neither of those two Xorg logs.

Are you sure you capture the log after the crash but before the X server gets restarted as Alan suggested in comment 2 (ie, the "Xorg.0.log.old" or "Xorg.0.log.prev")?

Meanwhile, I'll try to reproduce on my own.
Comment 6 Nick Sarnie 2015-08-27 13:28:11 UTC
(In reply to Olivier Fourdan from comment #5)
> Unfortunately, I can't see the X server crashing in neither of those two
> Xorg logs.
> 
> Are you sure you capture the log after the crash but before the X server
> gets restarted as Alan suggested in comment 2 (ie, the "Xorg.0.log.old" or
> "Xorg.0.log.prev")?
> 
> Meanwhile, I'll try to reproduce on my own.

Yeah, the log is correct. It doesn't seem Xserver is crashing. I attached GDB over ssh and the only output I got was
[Thread 0x7ff9669e0940 (LWP 4978) exited]
[Inferior 1 (process 4978) exited with code 0177]
Comment 7 Olivier Fourdan 2015-08-27 14:03:49 UTC
As discussed on irc, the error that cause the X server to terminate is a linker error:

/usr/bin/X: symbol lookup error: /usr/lib64/xorg/modules/extensions/libglx.so: undefined symbol: ResourceClientBits
Comment 8 Olivier Fourdan 2015-08-31 06:18:00 UTC
Created attachment 118006 [details] [review]
Proposed fix

Hi, can you try with this patch applied?
Comment 9 Nick Sarnie 2015-08-31 13:49:21 UTC
(In reply to Olivier Fourdan from comment #8)
> Created attachment 118006 [details] [review] [review]
> Proposed fix
> 
> Hi, can you try with this patch applied?

Hi Oliver,

This patch fixes the issue for me.

Tested-by: Nick Sarnie <commendsarnex@gmail.com>

Thanks
Comment 10 Olivier Fourdan 2015-09-02 05:34:25 UTC
Patch is now merged by Keith:

Merged.
   dbfed3a..c74c074  master -> master


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.